# codex-guardian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GRANT_APPLICATION.md  README.md  STATUS.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
codex_guardian/: __init__.py  cli.py  config.py  detector.py  thresholds.py
src/: __init__.py  session_index.py  thresholds.py
src/codex_guardian/: __init__.py  alerter.py  cli.py  detector.py  log_parser.py
tests/: __init__.py  conftest.py  test_alerter.py  test_config.py  test_detector.py  test_log_parser.py  test_parser.py
tests/fixtures/: infinite_loop_session.jsonl  normal_session.jsonl  risky_command_session.jsonl  stuck_session.jsonl  token_spike_session.jsonl
