[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-guardian"
version = "0.2.0"
description = "Protect your Codex CLI sessions from runaway token burn"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jithendra Nara", email = "jithendra.n@gmail.com"}
]
keywords = ["codex", "openai", "token-burn", "monitoring", "cli", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]
telegram = ["python-telegram-bot>=20.7"]
all = [
    "python-telegram-bot>=20.7",
    "aiohttp>=3.9.0",
]

[project.scripts]
codex-guardian = "codex_guardian.cli:cli"

[project.urls]
Homepage = "https://github.com/JithendraNara/codex-guardian"
Repository = "https://github.com/JithendraNara/codex-guardian"
Issues = "https://github.com/JithendraNara/codex-guardian/issues"
Changelog = "https://github.com/JithendraNara/codex-guardian/blob/main/CHANGELOG.md"
